fix photos on MOBILE

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -1,14 +1,23 @@
 select {
   background-color: #fff;
   height: 1.5rem;
-  width: 7rem;
+  width: 8rem;
+  font-family: $openSans;
+	font-weight: bold;
+	font-style: normal;
+  font-size: 14px;
 }  //drop-down option
 
 .background {
+  display: flex;
   height: 400px;
   position: relative;
-  width: 25rem;
-}
+  width: 100%;
+  background-size: cover;
+  background-position: 50%;
+  // vertical-align: text-bottom;
+  // grid-template-row: repeat(12,1fr);
+} //article background image 
 
 .abstract {
   color: $fontWhite;
@@ -18,9 +27,27 @@ select {
   font-size: $fontSize;
   position: absolute;
   margin-top: 20em;
-  text-align: center;
+  background: linear-gradient(180deg,rgba(0,0,0,.50) 0,rgba(0,0,0,.50));
+  line-height: 1.25em;
+  padding-right: 2%;
+  padding-left: 2%;
   display: flex;
   flex: wrap;
   justify-content: center;
-  align-items: flex-start;
+  //align-items: flex-end;
 }  //paragraph of articles
+.news {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+
+  li {
+    width: 100%;
+    flex-basis: 50%;
+  }
+}
+.new-grid {
+  margin: 0 auto;
+  width: 100%;
+}
