--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,7 +1,7 @@
-footer {
+.copyright {
   font-family: $openSans;
-  font-weight: normal;
-  font-style: normal;
-  color: #C2C2C2;
-  font-size: $fontSize;
+	font-weight: 300;
+	font-style: normal;
+  color: $footerFontColor;
+  font-size: 0.75rem;
 }
