--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -1,3 +1,6 @@
 * {
   background-color: black;
 }
+.logo{
+  margin: 8rem 5rem 0 5rem;
+}
