--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,4 +4,6 @@
 	font-style: normal;
   color: $fontWhite;
   font-size: $fontSize;
+  padding-top: 1rem;
+  padding-left: 8rem;
 }
