--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,1 +1,6 @@
 // media query 
+@media only screen and (min-width: 600px) {
+  .header {
+    
+  }
+}
